added demo page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,7 @@
             </p>
             <p class="text-center">
                 <a type="button" class="btn btn-lg btn-default" href="https://github.com/pasupulaphani/angular-socialsharing/tarball/master">Download TAR</a>
-                <a type="button" class="btn btn-lg btn-default" href="#/demo" ng-show="false">Demo</a>
+                <a type="button" class="btn btn-lg btn-default" href="#/demo">Demo</a>
                 <a type="button" class="btn btn-lg btn-default" href="https://github.com/pasupulaphani/angular-socialsharing">Github&nbsp;Project</a>
             </p>
         </section>
