--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,13 @@ body {
 .starter-template {
   padding: 0 15px;
 }
+
+#plunkerIframe {
+    position: relative;
+    height: 100%;
+    width: 100%; 
+}
+
 .navbar-brand {
   padding: 4px 15px;
 }
