--- a/app/views/demo.html
+++ b/app/views/demo.html
@@ -1,7 +1,5 @@
 <div class="container">
     <div class="starter-template">
-        <h2>
-            <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>coming soon
-        </h2>
+        <iframe id="plunkerIframe" scrolling="no" frameborder="0" src="http://embed.plnkr.co/xSwjk6fXgKRqIGb56KBp/preview"></iframe>
     </div>
 </div>
